element demo reunion

--- a/src/pages/check-list/check-list_boulanger.html
+++ b/src/pages/check-list/check-list_boulanger.html
@@ -11,7 +11,7 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Commercial terrain
+				Boulanger Bio
 			  </ion-card-title>
 			</ion-card-content>
 		  </ion-card>
@@ -21,7 +21,7 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Commercial indépendant
+				Boulanger
 			  </ion-card-title>
 			</ion-card-content>
 		  </ion-card>
@@ -33,8 +33,9 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Directeur d'observatoire
+				Boulanger patissier
 			  </ion-card-title>
+				<p style="color:red"> BP boulangerie</p>
 			</ion-card-content>
 		  </ion-card>
 	  </ion-slide>
