--- a/src/pages/check/check.html
+++ b/src/pages/check/check.html
@@ -5,16 +5,16 @@
 	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image1.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Commerce</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Bio</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Technologie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisan</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Réseau</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -258,11 +258,6 @@
 			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
 		  </ion-col>
 		</ion-row>
-		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;height:16px;">
-		  <ion-col>
-		  <p style="border:1px solid red!important;border-radius:3px;color:red;width:30%;margin:auto;">Requis : BP Pâtissier</p>
-		  </ion-col>
-		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
 		  <ion-item no-lines color="none" id="check-list-item1" style="border:none">
 			<ion-icon name="construct" item-left> </ion-icon>
@@ -277,7 +272,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Tampon
+				La Rivière 
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
