modification de valeurs

--- a/src/pages/check/check.html
+++ b/src/pages/check/check.html
@@ -31,7 +31,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Tampon
+				Le Port
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -43,7 +43,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				2100€
+				A négocier
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -65,16 +65,16 @@
 	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image2.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Commerce</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Tourier</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Digital</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Prospection</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisanat</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Technologie</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -103,7 +103,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				1800€
+				5 - 10K€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -125,16 +125,16 @@
 	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image3.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Direction</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Tourier</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Finance</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Organisation</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -151,7 +151,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Tampon
+				Saint-Denis
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -163,7 +163,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				1700€
+				A négocier
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -186,16 +186,16 @@
 	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image4.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Directeur</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Vente</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Finance</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Gestion</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Organisation</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -246,16 +246,16 @@
 	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image5.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Direction</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisan</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Astronomie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Gestion</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Science</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -284,7 +284,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				2500€
+				3500€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
