Mon premier commit

--- a/src/pages/check/check.html
+++ b/src/pages/check/check.html
@@ -2,19 +2,19 @@
   <img src="assets/img/6LYjkiuSwM870SedoHmA_logoCheck_reduce.png" style="display:block;max-width:40%;height:auto;margin: 3% auto 7% auto;" on-click="goToTalk()"/>
   
   <div id="1" style="height:80%;">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image1.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Commerce</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Technologie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Bio</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Réseau</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisan</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -24,14 +24,14 @@
 		  </ion-item>
 		  <ion-item color="none" no-lines  id="check-list-item2" style="border:none">
 			<ion-icon name="heart" item-left></ion-icon>
-			90%
+			85%
 		  </ion-item >
 		</ion-item-sliding>
 		<ion-row no-padding >
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Port
+				Coming soon
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -43,7 +43,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				A négocier
+				2100€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -62,19 +62,19 @@
   </div>
   
    <div id="2" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image2.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test2.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Commerce</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Digital</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Tourier</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Prospection</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Technologie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisanat</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -91,7 +91,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Tampon
+				Coming soon
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -103,7 +103,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				5 - 10K€
+				1800€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -122,19 +122,19 @@
   </div>
   
    <div id="3" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image3.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test3.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Direction</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Finance</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Tourier</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Organisation</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -151,7 +151,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Saint-Denis
+				Coming soon
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -163,7 +163,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				A négocier
+				1700€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
@@ -183,19 +183,19 @@
   
 
    <div id="4" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image4.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test4.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Directeur</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Finance</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Vente</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Gestion</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Organisation</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -212,7 +212,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				Le Tampon
+				Coming soon
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -243,19 +243,24 @@
   </div> 
   
   <div id="5" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image5.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test5.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
-		  <p style="border:1px solid #000!important;border-radius:3px;">#Direction</p>
+		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Astronomie</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Artisan</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #000!important;border-radius:3px;">#Gestion</p>
+			<p style="border:1px solid #000!important;border-radius:3px;">#Boulangerie</p>
 		  </ion-col>
 		  <ion-col >
-			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Science</p>
+			<p style="border:1px solid #44D9E6!important;border-radius:3px;color:#44D9E6;">#Pâtisserie</p>
+		  </ion-col>
+		</ion-row>
+		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;height:16px;">
+		  <ion-col>
+		  <p style="border:1px solid red!important;border-radius:3px;color:red;width:30%;margin:auto;">Requis : BP Pâtissier</p>
 		  </ion-col>
 		</ion-row>
 		<ion-item-sliding style="width:min-content;margin:4% auto;">
@@ -272,7 +277,7 @@
 		  <ion-col>
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pin" style="color:#44D9E6;"> </ion-icon><br>
-				La Rivière 
+				Coming soon
 			  </ion-item>
 		  </ion-col>
 		  <ion-col >
@@ -284,7 +289,7 @@
 		  <ion-col >
 			  <ion-item no-lines color="none" id="check-list-item1" style="border:none;text-align:center;">
 				<ion-icon name="pricetag" style="color:#44D9E6;"> </ion-icon><br>
-				3500€
+				2500€
 			  </ion-item>
 		  </ion-col>
 		</ion-row>
