--- a/src/pages/check-list/check-list stor.html
+++ b/src/pages/check-list/check-list stor.html
@@ -11,7 +11,7 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Boulanger Bio
+				Commercial terrain
 			  </ion-card-title>
 			</ion-card-content>
 		  </ion-card>
@@ -21,7 +21,7 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Boulanger
+				Commercial indépendant
 			  </ion-card-title>
 			</ion-card-content>
 		  </ion-card>
@@ -33,9 +33,8 @@
 
 			<ion-card-content>
 			  <ion-card-title>
-				Boulanger patissier
+				Directeur d'observatoire
 			  </ion-card-title>
-				<p style="color:red"> BP boulangerie</p>
 			</ion-card-content>
 		  </ion-card>
 	  </ion-slide>
