Mon troisème commit  pffff

--- a/src/pages/check/check.html
+++ b/src/pages/check/check.html
@@ -2,7 +2,7 @@
   <img src="assets/img/6LYjkiuSwM870SedoHmA_logoCheck_reduce.png" style="display:block;max-width:40%;height:auto;margin: 3% auto 7% auto;" on-click="goToTalk()"/>
   
   <div id="1" style="height:80%;">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image1.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
 		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
@@ -62,7 +62,7 @@
   </div>
   
    <div id="2" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test2.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image2.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
 		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
@@ -122,7 +122,7 @@
   </div>
   
    <div id="3" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test3.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image3.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
 		  <p style="border:1px solid #000!important;border-radius:3px;">#Vente</p>
@@ -183,7 +183,7 @@
   
 
    <div id="4" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test4.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image4.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
 		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
@@ -243,7 +243,7 @@
   </div> 
   
   <div id="5" style="height:80%;display:none">
-	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/test5.png" />
+	<img style="width:96%; margin:2%;border-radius:10px;" src="assets/img/image5.png" />
 		<ion-row no-padding style="text-align:center;font-size:14px;width:96%;margin:auto;">
 		  <ion-col>
 		  <p style="border:1px solid #000!important;border-radius:3px;">#Management</p>
