--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -55,7 +55,7 @@
     </ion-row>
   </div>
   <button id="signup-button1" ion-button color="dark" block style="color:#FFFFFF;border-radius:10px;width:50%;margin:50px auto;" (click)='goToTalk()'>
-      Commencer
+      Voir les jobs
   </button>
   </div>
 </ion-content>
